plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'hicc'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// MySQL Driver
	implementation 'com.mysql:mysql-connector-j'
	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// OpenAPI/Swagger (Springdoc)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	jvmArgs += [
			'--add-opens=java.base/java.lang=ALL-UNNAMED',
			'-XX:+EnableDynamicAgentLoading'
	]
	useJUnitPlatform()
}